k3s/cluster/apps/longhorn-backed/home-assistant/workload/service-homeassistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: homeassistant
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homeassistant
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 8123
      targetPort: http
